--- a/customer_segmentation.ipynb
+++ b/customer_segmentation.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPQrYP3KUffdgRvzmS1soRa"
+      "authorship_tag": "ABX9TyNIWayrLf1MqPVvscL3N6sz",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -17,7 +18,93 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "source": [],
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Suchi102005/Customer_segmentation/blob/main/customer_segmentation.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "📑** Customer Segmentation & Cluster Classification Report**\n",
+        "\n",
+        "Sumitted By : Narasingu Sai Suchendar\n",
+        "\n",
+        "**1. Introduction**\n",
+        "\n",
+        "Retail businesses often need to understand their customers to improve marketing, product placement, and personalized offers. Customer segmentation groups customers into clusters with similar characteristics.\n",
+        "\n",
+        "**This project applies:**\n",
+        "\n",
+        "Unsupervised ML → KMeans, Hierarchical Clustering, DBSCAN.\n",
+        "\n",
+        "Supervised ML → Logistic Regression, Elastic Net.\n",
+        "\n",
+        "The goal: segment customers, then build predictive models that can classify new customers into clusters.\n",
+        "\n",
+        "**2. Dataset**\n",
+        "\n",
+        "Source: Mall Customers Dataset\n",
+        "\n",
+        "Columns Used:\n",
+        "\n",
+        "Age\n",
+        "\n",
+        "Annual Income (k$)\n",
+        "\n",
+        "Spending Score (1–100)\n",
+        "\n",
+        "Gender encoded as numeric (0 = Female, 1 = Male).\n",
+        "\n",
+        "Data scaled using StandardScaler.\n",
+        "\n",
+        "**3. Methodology**\n",
+        "Step 1: Clustering (Unsupervised ML)\n",
+        "\n",
+        "**KMeans**\n",
+        "\n",
+        "Groups customers by minimizing distance to cluster centroids.\n",
+        "\n",
+        "\n",
+        "Chosen k = 5 clusters (Elbow Method).\n",
+        "\n",
+        "**Hierarchical Clustering**\n",
+        "\n",
+        "Agglomerative method using Ward’s linkage (minimizes variance when merging clusters).\n",
+        "\n",
+        "Builds a dendrogram, cut at 5 clusters.\n",
+        "\n",
+        "**DBSCAN**\n",
+        "\n",
+        "Groups customers based on density of points.\n",
+        "\n",
+        "Parameters: eps=0.6, min_samples=5.\n",
+        "\n",
+        "Detects noise points (-1 label).\n",
+        "\n",
+        "**Step 2: Supervised Models**\n",
+        "\n",
+        "Cluster labels were treated as target variables.\n",
+        "\n",
+        "**Logistic Regression**\n",
+        "\n",
+        "Multi-class classification (One-vs-Rest).\n",
+        "\n",
+        "\n",
+        "Evaluated using accuracy, precision, recall, F1-score.\n",
+        "\n",
+        "**Elastic Net Regression**\n",
+        "\n",
+        "Predicts cluster IDs as numeric values.\n",
+        "\n",
+        "Combines L1 (Lasso) and L2 (Ridge):\n",
+        "\n",
+        "\n",
+        "Evaluated using Mean Squared Error (MSE)."
+      ],
       "metadata": {
         "id": "EoY6tpuJQoSP"
       }
@@ -337,6 +424,50 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**5. Business Insights**\n",
+        "\n",
+        "From KMeans (5 clusters), typical profiles look like:\n",
+        "\n",
+        "Cluster 0 – Low Income, Low Spending → Budget customers\n",
+        "\n",
+        "Cluster 1 – High Income, High Spending → VIP customers (priority segment 💎)\n",
+        "\n",
+        "Cluster 2 – High Income, Low Spending → Potential customers (need engagement)\n",
+        "\n",
+        "Cluster 3 – Medium Income, Medium Spending → Average customers\n",
+        "\n",
+        "Cluster 4 – Low Income, High Spending → Price-sensitive but loyal shoppers"
+      ],
+      "metadata": {
+        "id": "X5Cvd-ADS9M4"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**6. Conclusion**\n",
+        "\n",
+        "KMeans produced the clearest customer groups.\n",
+        "\n",
+        "Logistic Regression is the best for predicting new customer segments (high accuracy).\n",
+        "\n",
+        "Elastic Net is useful for numerical approximation but less effective for categorical clusters.\n",
+        "\n",
+        "Business use:\n",
+        "\n",
+        "Target VIPs with exclusive offers.\n",
+        "\n",
+        "Encourage high-income/low-spending customers with promotions.\n",
+        "\n",
+        "Retain price-sensitive but loyal spenders with discounts."
+      ],
+      "metadata": {
+        "id": "UGb44V0pTApB"
+      }
     }
   ]
 }
